Added live application link

--- a/about.html
+++ b/about.html
@@ -91,7 +91,7 @@
                     </ul>
                     <ul class="navbar-nav align-items-lg-center ml-lg-auto">
                         <li class="nav-item d-none d-lg-block ml-lg-4">
-                            <a data-toggle="modal" data-target="#modal-notification" class="btn btn-neutral btn-icon">
+                            <a href="https://forms.gle/GPdMoJJLr8FdNQiM9" target="_blank" class="btn btn-neutral btn-icon">
                                 <span class="btn-inner--icon">
                                     <i class="fa fa-pencil-square-o"></i>
                                 </span>
@@ -123,10 +123,10 @@
                             <div class="col-lg-6">
                                 <h1 class="display-3  text-white">About the Program
                                 </h1>
-                                <p class="lead text-white">Applications for the 2019 program open May 14th and close June 29th.</p>
+                                <p class="lead text-white">Applications for the 2019 program are now open, and they close on June 27th.</p>
                                 <p class="lead text-white">The program begins Wednesday, August 21st and ends Saturday, August 24th.</p>
                                 <div class="btn-wrapper">
-                                    <a href="#" class="btn btn-info btn-icon mb-3 mb-sm-0" data-toggle="modal" data-target="#modal-notification">
+                                    <a href="https://forms.gle/GPdMoJJLr8FdNQiM9" target="_blank" class="btn btn-info btn-icon mb-3 mb-sm-0">
                                         <span class="btn-inner--icon"><i class="fa fa-pencil-square-o"></i></span>
                                         <span class="btn-inner--text">Apply Now</span>
                                     </a>
@@ -187,7 +187,7 @@
                             <div class="tab-pane fade" id="tabs-icons-text-3" role="tabpanel" aria-labelledby="tabs-icons-text-3-tab">
                                 <p class="description">Incoming students are selected to participate in Leadership Advantage through an application process available on our website. To be considered for the program, one must be an incoming MSU freshman studying engineering. There is a program fee (currently $220) to cover the costs in excess of those covered by the university or by sponsors. Payment information will be sent out to accepted participants.</p>
                                 <div class="btn-wrapper">
-                                    <a href="https://demos.creative-tim.com/argon-design-system/docs/components/alerts.html" class="btn btn-info btn-icon mb-3 mb-sm-0" data-toggle="modal" data-target="#modal-notification">
+                                    <a href="https://forms.gle/GPdMoJJLr8FdNQiM9" target="_blank" class="btn btn-info btn-icon mb-3 mb-sm-0">
                                         <span class="btn-inner--icon"><i class="fa fa-pencil-square-o"></i></span>
                                         <span class="btn-inner--text">Apply Now</span>
                                     </a>
@@ -238,39 +238,6 @@
                     </div>
                 </div>
 
-            </div>
-        </section>
-        <section>
-            <div class="col-md-4">
-                <div class="modal fade" id="modal-notification" tabindex="-1" role="dialog" aria-labelledby="modal-notification" aria-hidden="true">
-                    <div class="modal-dialog modal-danger modal-dialog-centered modal-" role="document">
-                        <div class="modal-content bg-gradient-danger">
-
-                            <div class="modal-header">
-                                <h6 class="modal-title" id="modal-title-notification"></h6>
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                    <span aria-hidden="true">×</span>
-                                </button>
-                            </div>
-
-                            <div class="modal-body">
-
-                                <div class="py-3 text-center">
-                                    <i class="ni ni-bell-55 ni-3x"></i>
-                                    <h4 class="heading mt-4">Thank you for your interest!</h4>
-                                    <p>The application for 2019 has not been opened yet.</p>
-                                </div>
-
-                            </div>
-
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-white" data-dismiss="modal">Ok, Got it</button>
-                                <button type=" button" class="btn btn-link text-white ml-auto" data-dismiss="modal">Close</button>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
             </div>
         </section>
     </main>
