--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     </ul>
                     <ul class="navbar-nav align-items-lg-center ml-lg-auto">
                         <li class="nav-item d-none d-lg-block ml-lg-4">
-                            <a data-toggle="modal" data-target="#modal-notification" class="btn btn-neutral btn-icon">
+                            <a href="https://forms.gle/GPdMoJJLr8FdNQiM9" target="_blank" class="btn btn-neutral btn-icon">
                                 <span class="btn-inner--icon">
                                     <i class="fa fa-pencil-square-o"></i>
                                 </span>
@@ -135,7 +135,7 @@
                                 </p>
 
                                 <div class="btn-wrapper">
-                                    <a href="#" class="btn btn-info btn-icon mb-3 mb-sm-0" data-toggle="modal" data-target="#modal-notification">
+                                    <a href="https://forms.gle/GPdMoJJLr8FdNQiM9" target="_blank" class="btn btn-info btn-icon mb-3 mb-sm-0">
                                         <span class="btn-inner--icon"><i class="fa fa-pencil-square-o"></i></span>
                                         <span class="btn-inner--text">Apply Now</span>
                                     </a>
@@ -259,7 +259,7 @@
                 </div>
             </div>
         </section>
-        <section>
+        <!--<section>
             <div class="col-md-4">
                 <div class="modal fade" id="modal-notification" tabindex="-1" role="dialog" aria-labelledby="modal-notification" aria-hidden="true">
                     <div class="modal-dialog modal-danger modal-dialog-centered modal-" role="document">
@@ -276,14 +276,13 @@
 
                                 <div class="py-3 text-center">
                                     <i class="ni ni-bell-55 ni-3x"></i>
-                                    <h4 class="heading mt-4">Thank you for your interest!</h4>
-                                    <p>The application for 2019 has not been opened yet.</p>
+                                    <h4 class="heading mt-4">Thank you for your interest.</h4>
+                                    <p>Unfortunately, the application for 2019 has been closed.</p>
                                 </div>
 
                             </div>
 
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-white" data-dismiss="modal">Ok, Got it</button>
                                 <button type=" button" class="btn btn-link text-white ml-auto" data-dismiss="modal">Close</button>
                             </div>
 
@@ -291,7 +290,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section>-->
     </main>
     <footer class="footer">
         <div class="container">
