--- a/team.html
+++ b/team.html
@@ -93,7 +93,7 @@
                     </ul>
                     <ul class="navbar-nav align-items-lg-center ml-lg-auto">
                         <li class="nav-item d-none d-lg-block ml-lg-4">
-                            <a data-toggle="modal" data-target="#modal-notification" class="btn btn-neutral btn-icon">
+                            <a href="https://forms.gle/GPdMoJJLr8FdNQiM9" target="_blank" class="btn btn-neutral btn-icon">
                                 <span class="btn-inner--icon">
                                     <i class="fa fa-pencil-square-o"></i>
                                 </span>
@@ -357,41 +357,6 @@
                 </div>
             </div>
         </section> -->
-
-
-        <section>
-            <div class="col-md-4">
-                <div class="modal fade" id="modal-notification" tabindex="-1" role="dialog" aria-labelledby="modal-notification" aria-hidden="true">
-                    <div class="modal-dialog modal-danger modal-dialog-centered modal-" role="document">
-                        <div class="modal-content bg-gradient-danger">
-
-                            <div class="modal-header">
-                                <h6 class="modal-title" id="modal-title-notification"></h6>
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                    <span aria-hidden="true">×</span>
-                                </button>
-                            </div>
-
-                            <div class="modal-body">
-
-                                <div class="py-3 text-center">
-                                    <i class="ni ni-bell-55 ni-3x"></i>
-                                    <h4 class="heading mt-4">Thank you for your interest!</h4>
-                                    <p>The application for 2019 has not been opened yet.</p>
-                                </div>
-
-                            </div>
-
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-white" data-dismiss="modal">Ok, Got it</button>
-                                <button type=" button" class="btn btn-link text-white ml-auto" data-dismiss="modal">Close</button>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
     </main>
     <footer class="footer">
         <div class="container">
