Updated website for 2019-2020 offseason

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
     <meta name="description" content="Launch Your Engineering Career at MSU's leadership seminar designed specifically for students interested in engineering.">
     <meta name="theme-color" content="#18453b">
 
-    <title>Leadership Advantage</title>
+    <title>Leadership Advantage - About</title>
     <!-- Favicon -->
     <link href="assets/img/brand/favicon.ico" rel="icon" type="image/png">
     <!-- Fonts -->
@@ -134,8 +134,12 @@
                             <div class="col-lg-6">
                                 <h1 class="display-3  text-white">About the Program
                                 </h1>
+                                <p class="lead text-white">Applications for the 2020 program are not yet open.</p>
+                                <p class="lead text-white">The applications will open in the Spring.</p>
+                                <!--
                                 <p class="lead text-white">Applications for the 2019 program are now open, and they close on June 27th.</p>
                                 <p class="lead text-white">The program begins Wednesday, August 21st and ends Saturday, August 24th.</p>
+                                -->
                                 <div class="btn-wrapper">
                                     <a href="https://forms.gle/GPdMoJJLr8FdNQiM9" target="_blank" class="btn btn-info btn-icon mb-3 mb-sm-0">
                                         <span class="btn-inner--icon"><i class="fa fa-pencil-square-o"></i></span>
