--- a/team.html
+++ b/team.html
@@ -16,7 +16,7 @@
     <meta name="description" content="Launch Your Engineering Career at MSU's leadership seminar designed specifically for students interested in engineering.">
     <meta name="theme-color" content="#18453b">
 
-    <title>Leadership Advantage</title>
+    <title>Leadership Advantage - Team</title>
     <!-- Favicon -->
     <link href="assets/img/brand/favicon.ico" rel="icon" type="image/png">
     <!-- Fonts -->
@@ -155,48 +155,30 @@
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0">
                                 <div class="card-body">
-                                    <img src="assets/img/team/delapaz.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Carlie DelaPaz's Photo">
-                                    <div class="text-center mt-3">
-                                        <h3 class="text-primary">Carlie DelaPaz</h3>
-                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Oxford, MI</div>
-                                        <div class="h6"><i class="fa fa-briefcase mr-2"></i>External President</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Civil Engineering </div>
-                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2020</div>
-                                    </div>
-
-                                    <!-- <div class="border-top">
-                                        <p class="description mt-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
-                                    </div> -->
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 mb-4">
-                            <div class="card shadow border-0">
-                                <div class="card-body">
-                                    <img src="assets/img/team/powers.jpeg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Sean Powers's Photo">
-                                    <div class="text-center mt-3">
-                                        <h3 class="text-primary">Sean Powers</h3>
-                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Elyria, OH</div>
-                                        <div class="h6"><i class="fa fa-briefcase mr-2"></i>Internal President</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Mechanical Engineering</div>
-                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>December 2019</div>
-                                    </div>
-
-                                    <!-- <div class="border-top">
-                                        <p class="description mt-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
-                                    </div> -->
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 mb-4">
-                            <div class="card shadow border-0">
-                                <div class="card-body">
-                                    <img src="assets/img/team/lemieux.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Sean Lemieux's Photo">
+                                    <img src="assets/img/team/lemieux.jpeg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Sean Lemieux's Photo">
                                     <div class="text-center mt-3">
                                         <h3 class="text-primary">Sean Lemieux</h3>
                                         <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Clarkston, MI</div>
-                                        <div class="h6"><i class="fa fa-briefcase mr-2"></i>Secretary</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Chemical Engineering</div>
+                                        <div class="h6"><i class="fa fa-briefcase mr-2"></i>External President</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Chemical Engineering </div>
+                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2022</div>
+                                    </div>
+
+                                    <!-- <div class="border-top">
+                                        <p class="description mt-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
+                                    </div> -->
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 mb-4">
+                            <div class="card shadow border-0">
+                                <div class="card-body">
+                                    <img src="assets/img/team/bangtson.jpeg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Matt Bangston's Photo">
+                                    <div class="text-center mt-3">
+                                        <h3 class="text-primary">Matt Bangtson</h3>
+                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Edwardsburg, MI</div>
+                                        <div class="h6"><i class="fa fa-briefcase mr-2"></i>Internal President</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Supply Chain Management</div>
                                         <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2021</div>
                                     </div>
 
@@ -209,13 +191,13 @@
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0">
                                 <div class="card-body">
-                                    <img src="assets/img/team/yalamanchili.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Rahul Yalamanchili's Photo">
+                                    <img src="assets/img/team/mariah.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Mariah Seybold's Photo">
                                     <div class="text-center mt-3">
-                                        <h3 class="text-primary">Rahul Yalamanchili</h3>
-                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Farmington Hills, MI</div>
-                                        <div class="h6"><i class="fa fa-briefcase mr-2"></i>Webmaster</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Computer Science</div>
-                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2020</div>
+                                        <h3 class="text-primary">Mariah Seybold</h3>
+                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Davison, MI</div>
+                                        <div class="h6"><i class="fa fa-briefcase mr-2"></i>Secretary</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Chemical Engineering</div>
+                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2021</div>
                                     </div>
 
                                     <!-- <div class="border-top">
@@ -227,13 +209,31 @@
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0">
                                 <div class="card-body">
-                                    <img src="assets/img/team/wah.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Bella Wah's Photo">
+                                    <img src="assets/img/team/mears.jpeg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Connor Mears's Photo">
                                     <div class="text-center mt-3">
-                                        <h3 class="text-primary">Bella Wah</h3>
-                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Jensen Beach, FL</div>
+                                        <h3 class="text-primary">Connor Mears</h3>
+                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Linden, MI</div>
+                                        <div class="h6"><i class="fa fa-briefcase mr-2"></i>Webmaster</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Computer Science</div>
+                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2022</div>
+                                    </div>
+
+                                    <!-- <div class="border-top">
+                                        <p class="description mt-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
+                                    </div> -->
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 mb-4">
+                            <div class="card shadow border-0">
+                                <div class="card-body">
+                                    <img src="assets/img/team/arnoldt.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Sean Arnoldt's Photo">
+                                    <div class="text-center mt-3">
+                                        <h3 class="text-primary">Sean Arnoldt</h3>
+                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Chicago, IL</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Treasurer</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Advertising Management </div>
-                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>December 2019</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Computer Engineering </div>
+                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2021</div>
                                     </div>
 
                                     <!-- <div class="border-top">
@@ -250,8 +250,8 @@
                                         <h3 class="text-primary">Joe Lietaert</h3>
                                         <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Lambertville, MI</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Recruitment</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Applied Engineering</div>
-                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2022</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Packaging</div>
+                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2021</div>
                                     </div>
 
                                     <!-- <div class="border-top">
@@ -263,13 +263,13 @@
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0">
                                 <div class="card-body">
-                                    <img src="assets/img/team/bangston.jpeg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Matt Bangtson's Photo">
+                                    <img src="assets/img/team/guertin.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Ben Guertin's Photo">
                                     <div class="text-center mt-3">
-                                        <h3 class="text-primary">Matt Bangtson</h3>
-                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Edwardsburg, MI</div>
+                                        <h3 class="text-primary">Ben Guertin</h3>
+                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Ellicott City, MD</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Caterer</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Supply Chain Management</div>
-                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2021</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Civil Engineering</div>
+                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>December 2020</div>
                                     </div>
 
                                     <!-- <div class="border-top">
