Updated website for 2019-2020 offseason

--- a/team.html
+++ b/team.html
@@ -196,7 +196,7 @@
                                         <h3 class="text-primary">Mariah Seybold</h3>
                                         <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Davison, MI</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Secretary</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Chemical Engineering</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Fifth Year Senior, Chemical Engineering</div>
                                         <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2021</div>
                                     </div>
 
