updated for 2020 season

--- a/about.html
+++ b/about.html
@@ -102,7 +102,7 @@
                     </ul>
                     <ul class="navbar-nav align-items-lg-center ml-lg-auto">
                         <li class="nav-item d-none d-lg-block ml-lg-4">
-                            <a href="https://forms.gle/GPdMoJJLr8FdNQiM9" target="_blank" class="btn btn-neutral btn-icon">
+                            <a href="https://forms.gle/k5B6kiJSXPdmrVaJ7" target="_blank" class="btn btn-neutral btn-icon">
                                 <span class="btn-inner--icon">
                                     <i class="fa fa-pencil-square-o"></i>
                                 </span>
@@ -134,14 +134,14 @@
                             <div class="col-lg-6">
                                 <h1 class="display-3  text-white">About the Program
                                 </h1>
+                                <!--
                                 <p class="lead text-white">Applications for the 2020 program are not yet open.</p>
                                 <p class="lead text-white">The applications will open in the Spring.</p>
-                                <!--
-                                <p class="lead text-white">Applications for the 2019 program are now open, and they close on June 27th.</p>
-                                <p class="lead text-white">The program begins Wednesday, August 21st and ends Saturday, August 24th.</p>
                                 -->
+                                <p class="lead text-white">Applications for the 2020 program are now open, and they close on July 5th.</p>
+                                <p class="lead text-white">The program begins Wednesday, August 26th and ends Saturday, August 29th.</p>
                                 <div class="btn-wrapper">
-                                    <a href="https://forms.gle/GPdMoJJLr8FdNQiM9" target="_blank" class="btn btn-info btn-icon mb-3 mb-sm-0">
+                                    <a href="https://forms.gle/k5B6kiJSXPdmrVaJ7" target="_blank" class="btn btn-info btn-icon mb-3 mb-sm-0">
                                         <span class="btn-inner--icon"><i class="fa fa-pencil-square-o"></i></span>
                                         <span class="btn-inner--text">Apply Now</span>
                                     </a>
@@ -179,11 +179,11 @@
                             <div class="tab-pane fade show active" id="tabs-icons-text-1" role="tabpanel" aria-labelledby="tabs-icons-text-1-tab">
                                 <p class="description">The program consists of four competition based design challenges. Participants are placed into small teams ranging from five to nine students supported by two older student facilitators. Students must work together to overcome limited time and resources to complete a variety of challenges. Facilitators will aid the participants through design challenges and teamwork struggles.</p>
                                 <p class="description">Leadership Advantage allows students to develop their leadership skills and knowledge about opportunities at Michigan State University before classes begin. Teambuilding exercises, hands-on design projects, and student bonding activities help participants grow. The program allows for students to adjust to this new stage in their life along with their fellow Spartan Engineers.</p>
-                                <h3 class="heading-title mb-0">Focuses of the Program</h1>
+                                <h3 class="heading-title mb-0">Focuses of the Program</h3>
                                     <ul class="list-unstyled">
                                         <ul>
                                             <li>Developing personal leadership and communication skills that are critical to engineering success.</li>
-                                            <li>Providing awareness of leadership opportunities and engineering resources available on campus</li>
+                                            <li>Providing awareness of leadership opportunities and engineering resources available on campus.</li>
                                             <li>Enhancing teamwork skills through design projects and exercises, providing great student bonding opportunities.</li>
                                         </ul>
                                     </ul>
@@ -194,15 +194,15 @@
                                         <li>Breakfast, Lunch, and Dinner provided each day</li>
                                         <li>Project Design Competitions, Teambuilding, and Leadership Exercises</li>
                                         <li>Early move in to the dorms (avoid the crazy rush of move in day!)</li>
-                                        <li>Resume Building Workshop, Cyclotron Tour and Dairy Store Ice Cream!</li>
+                                        <li>Resume Building Workshop, Cyclotron Tour, and Dairy Store Ice Cream!</li>
                                         <li>End of Program Banquet</li>
                                     </ul>
                                 </ul>
                             </div>
                             <div class="tab-pane fade" id="tabs-icons-text-3" role="tabpanel" aria-labelledby="tabs-icons-text-3-tab">
-                                <p class="description">Incoming students are selected to participate in Leadership Advantage through an application process available on our website. To be considered for the program, one must be an incoming MSU freshman studying engineering. There is a program fee (currently $220) to cover the costs in excess of those covered by the university or by sponsors. Payment information will be sent out to accepted participants.</p>
+                                <p class="description">Incoming students are selected to participate in Leadership Advantage through an application process available on our website. To be considered for the program, one must be an incoming MSU freshman studying engineering. There is a program fee (currently $250) to cover the costs in excess of those covered by the university or by sponsors. Payment information will be sent out to accepted participants.</p>
                                 <div class="btn-wrapper">
-                                    <a href="https://forms.gle/GPdMoJJLr8FdNQiM9" target="_blank" class="btn btn-info btn-icon mb-3 mb-sm-0">
+                                    <a href="https://forms.gle/k5B6kiJSXPdmrVaJ7" target="_blank" class="btn btn-info btn-icon mb-3 mb-sm-0">
                                         <span class="btn-inner--icon"><i class="fa fa-pencil-square-o"></i></span>
                                         <span class="btn-inner--text">Apply Now</span>
                                     </a>
@@ -276,7 +276,7 @@
             <div class="row align-items-center justify-content-md-between">
                 <div class="col-md-6">
                     <div class="copyright">
-                        &copy; 2019
+                        &copy; 2020
                         Leadership Advantage.
                     </div>
                 </div>
