--- a/team.html
+++ b/team.html
@@ -102,7 +102,7 @@
                     </ul>
                     <ul class="navbar-nav align-items-lg-center ml-lg-auto">
                         <li class="nav-item d-none d-lg-block ml-lg-4">
-                            <a href="https://forms.gle/GPdMoJJLr8FdNQiM9" target="_blank" class="btn btn-neutral btn-icon">
+                            <a href="https://forms.gle/k5B6kiJSXPdmrVaJ7" target="_blank" class="btn btn-neutral btn-icon">
                                 <span class="btn-inner--icon">
                                     <i class="fa fa-pencil-square-o"></i>
                                 </span>
@@ -387,7 +387,7 @@
             <div class="row align-items-center justify-content-md-between">
                 <div class="col-md-6">
                     <div class="copyright">
-                        &copy; 2019
+                        &copy; 2020
                         Leadership Advantage.
                     </div>
                 </div>
