--- a/about.html
+++ b/about.html
@@ -177,8 +177,8 @@
                     <div class="card-body">
                         <div class="tab-content" id="myTabContent">
                             <div class="tab-pane fade show active" id="tabs-icons-text-1" role="tabpanel" aria-labelledby="tabs-icons-text-1-tab">
-                                <p class="description">The program consists of four competition based design challenges. Participants are placed into small teams ranging from five to nine students supported by two older student facilitators. Students must work together to overcome limited time and resources to complete a variety of challenges. Facilitators will aid the participants through design challenges and teamwork struggles.</p>
-                                <p class="description">Leadership Advantage allows students to develop their leadership skills and knowledge about opportunities at Michigan State University before classes begin. Teambuilding exercises, hands-on design projects, and student bonding activities help participants grow. The program allows for students to adjust to this new stage in their life along with their fellow Spartan Engineers.</p>
+                                <p class="description2">The program consists of four competition based design challenges. Participants are placed into small teams ranging from five to nine students supported by two older student facilitators. Students must work together to overcome limited time and resources to complete a variety of challenges. Facilitators will aid the participants through design challenges and teamwork struggles.</p>
+                                <p class="description2">Leadership Advantage allows students to develop their leadership skills and knowledge about opportunities at Michigan State University before classes begin. Teambuilding exercises, hands-on design projects, and student bonding activities help participants grow. The program allows for students to adjust to this new stage in their life along with their fellow Spartan Engineers.</p>
                                 <h3 class="heading-title mb-0">Focuses of the Program</h3>
                                     <ul class="list-unstyled">
                                         <ul>
@@ -200,7 +200,7 @@
                                 </ul>
                             </div>
                             <div class="tab-pane fade" id="tabs-icons-text-3" role="tabpanel" aria-labelledby="tabs-icons-text-3-tab">
-                                <p class="description">Incoming students are selected to participate in Leadership Advantage through an application process available on our website. To be considered for the program, one must be an incoming MSU freshman studying engineering. There is a program fee (currently $250) to cover the costs in excess of those covered by the university or by sponsors. Payment information will be sent out to accepted participants.</p>
+                                <p class="description2">Incoming students are selected to participate in Leadership Advantage through an application process available on our website. To be considered for the program, one must be an incoming MSU freshman studying engineering. There is a program fee (currently $250) to cover the costs in excess of those covered by the university or by sponsors. Payment information will be sent out to accepted participants.</p>
                                 <div class="btn-wrapper">
                                     <a href="https://forms.gle/k5B6kiJSXPdmrVaJ7" target="_blank" class="btn btn-info btn-icon mb-3 mb-sm-0">
                                         <span class="btn-inner--icon"><i class="fa fa-pencil-square-o"></i></span>
